Api endpoints setup with Spa extension build

--- a/Angular/.vscode/settings.json
+++ b/Angular/.vscode/settings.json
@@ -5,7 +5,7 @@
 //     // "editor.fontVariations": false,
 //     "editor.suggestFontSize": 0,
   
-//     "editor.fontFamily": "Space Mono,Anonymous Pro, cascadia code,fira code,Consolas, Liberation Mono, monospace",
+//     "editor.fontFamily": "cascadia code,fira code,Consolas, Liberation Mono, monospace",
   
 //     "editor.fontSize": 12.8,
 //     // "editor.lineDecorationsWidth": 10,
